# playing-with-rust

./: Cargo.toml  dev.txt  new-dev.txt
src/: arrays.rs  buff_files.rs  buff_files_with_tokio.rs  files.rs  iterators.rs  jsons.rs  main.rs  traits.rs
src/services/: db.rs  mod.rs
src/services/postgres/: connector.rs  postgres.rs
src/services/redis/: connector.rs  redis.rs
